# Queen-Bee-Evolution-Algorithm

./: README.md
code/: CMakeLists.txt  qbe.cc  qbe_am.cc  qbe_mejora.cc  testrandom.cc
